# Beer

./: README.md
axum_api_server/: .env.sample  Cargo.toml
axum_api_server/migrations/: 2_beer.sql
axum_api_server/src/: app.rs  beer.rs  main.rs  routes.rs
core_app_ui/: package-lock.json
core_app_ui/src/api/: setup.ts
core_app_ui/src/api/beerServer/: beerServer.test.ts  index.ts
core_app_ui/src/api/punkApi/: index.ts  punkApi.test.ts
core_app_ui/src/components/EmptyView/: index.tsx
core_app_ui/src/components/InformationCard/: index.tsx
core_app_ui/src/components/List/: index.tsx
core_app_ui/src/components/NavigationBar/: index.tsx
core_app_ui/src/components/Spinner/: index.tsx
core_app_ui/src/layout/: RootLayout.tsx
core_app_ui/src/pages/About/: index.tsx
core_app_ui/src/pages/Dashboard/: index.tsx
core_app_ui/src/pages/Dashboard/containers/: AddBeerContainer.tsx  AllBeerListContainer.tsx  MyBeerListContainer.tsx
core_app_ui/src/routes/: index.tsx
core_app_ui/src/theme/: index.ts
core_app_ui/src/utils/: scrollOnMutation.ts
uii/: package-lock.json  package.json
uii/src/: index.tsx
uii/src/api/: setup.ts
uii/src/api/punkApi/: index.ts
uii/src/components/EmptyView/: index.tsx
uii/src/components/List/: index.tsx
uii/src/components/TabComponentRenderer/: index.tsx
uii/src/pages/About/: index.tsx
uii/src/pages/Dashboard/containers/: AllBeerListContainer.tsx  MyBeerListContainer.tsx
uii/src/theme/: index.ts
