[package]
name = "beer-api-server"
version = "0.0.1"
edition = "2021"
publish = false
authors = [
    "Amogh Rijal <xamoghx@gmail.com>"
]

[dependencies]
# Core dependencies: runtime, HTTP framework and database client.
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.3.4", features = ["tower-log"] }
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "postgres", "uuid", "time", "chrono"] }
clap = "3.0.0-beta.5"
uuid = { version = "0.8", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
tracing-subscriber = "0.3.16"
tracing = "0.1.37"
serde = { version = "1.0.149", features = ["derive"] }
time = "0.3.17"
anyhow = "1.0.66"
tower = "0.4.13"
tower-http = { version = "0.3.5", features=["full"] }
axum-macros = "0.3.0"
chrono = { version= "0.4.23", features = ["serde"] }
